; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_ed.screen.c_ClearEOL.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_ed.screen.c_ClearEOL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@T_CanCEOL = common dso_local global i64 0, align 8
@T_ce = common dso_local global i32 0, align 4
@PUTPURE = common dso_local global i32 0, align 4
@CursorH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ClearEOL(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp sle i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %33

7:                                                ; preds = %1
  %8 = load i64, i64* @T_CanCEOL, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %7
  %11 = load i32, i32* @T_ce, align 4
  %12 = call i64 @GoodStr(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %10
  %15 = load i32, i32* @T_ce, align 4
  %16 = call i32 @Str(i32 %15)
  %17 = load i32, i32* @PUTPURE, align 4
  %18 = call i32 @tputs(i32 %16, i32 1, i32 %17)
  br label %33

19:                                               ; preds = %10, %7
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %26, %19
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* %2, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %20
  %25 = call i32 @putraw(i8 signext 32)
  br label %26

26:                                               ; preds = %24
  %27 = load i32, i32* %3, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %3, align 4
  br label %20

29:                                               ; preds = %20
  %30 = load i32, i32* %2, align 4
  %31 = load i32, i32* @CursorH, align 4
  %32 = add nsw i32 %31, %30
  store i32 %32, i32* @CursorH, align 4
  br label %33

33:                                               ; preds = %6, %29, %14
  ret void
}

declare dso_local i64 @GoodStr(i32) #1

declare dso_local i32 @tputs(i32, i32, i32) #1

declare dso_local i32 @Str(i32) #1

declare dso_local i32 @putraw(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
